add ul and li file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
          tempore possimus aut aspernatur quos cumque rerum.
           Nemo deleniti eius dolorem laudantium velit,
            ex alias totam.</p>
+           <ul>
+            <li>home </li>
+            <li>contact</li>
+            <li>about us</li>
+           </ul>
     
 </body>
 </html>
